<package format="2">
  <name>viz_stepper</name>
  <version>0.0.0</version>
  <description>for stepping my visualizations</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>peter_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
