<package format="2">
    <name>arm_gazebo_plugins</name>
    <version>0.0.0</version>
    <description>gazebo plugins</description>
    <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_ros</depend>
    <depend>arc_utilities</depend>
</package>
